// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompleteScreen Snapshots should match snapshot with session 1`] = `
<div>
  <div
    class="scrollContainer"
  >
    <div
      class="jv_R6g"
      style="--NZu1Zw: 24px;"
    >
      <div
        class="BMOCzQ EC2pjw LuBWVA"
        style="--KtVHvQ: 32px; --WtUbjw: 16px;"
      >
        <div
          class="jv_R6g"
          style="--NZu1Zw: 16px; --okeDpw: center;"
        >
          <div
            style="width: 80px; height: 80px; border-radius: 50%; background-color: rgb(0, 200, 83); display: flex; align-items: center; justify-content: center; margin: 0px auto;"
          >
            <span
              style="font-size: 40px; color: white;"
            >
              ✓
            </span>
          </div>
          <h2
            class="_8yjy_A aZskFA u16U_g"
          >
            Photo Booth Complete!
          </h2>
          <p
            class="aWBg0w B8t6MQ QxuLlQ"
          >
            Your photos have been placed on the current page successfully.
          </p>
        </div>
      </div>
      <div
        class="BMOCzQ jhljBg DL9KoQ EC2pjw LuBWVA"
        style="--gms-pw: 16px;"
      >
        <div
          class="jv_R6g"
          style="--NZu1Zw: 8px;"
        >
          <h5
            class="liTStw aZskFA u16U_g"
          >
            Session Summary
          </h5>
          <p
            class="JYIidw aZskFA u16U_g"
          >
            Photos captured: 2
          </p>
          <p
            class="JYIidw aZskFA u16U_g"
          >
            Photos placed on page: Yes
          </p>
          <p
            class="JYIidw aZskFA QxuLlQ"
          >
            Your captured photos have been placed at the frame positions on the current page.
          </p>
        </div>
      </div>
      <div
        class="BMOCzQ jhljBg DL9KoQ EC2pjw LuBWVA"
        style="--gms-pw: 16px;"
      >
        <div
          class="jv_R6g"
          style="--NZu1Zw: 8px;"
        >
          <h5
            class="liTStw aZskFA u16U_g"
          >
            💡 Next Steps
          </h5>
          <p
            class="JYIidw aZskFA u16U_g"
          >
            • Review and adjust photo positions if needed
          </p>
          <p
            class="JYIidw aZskFA u16U_g"
          >
            • Delete the placeholder images beneath the photos
          </p>
          <p
            class="JYIidw aZskFA u16U_g"
          >
            • Duplicate your template page again for more sessions
          </p>
        </div>
      </div>
      <div
        class="jv_R6g"
        style="--NZu1Zw: 16px;"
      >
        <button
          class="_5KtATA LQzFZw VgvqkQ _8ERLTg rV61VQ LQzFZw VgvqkQ _4_iekA _3oHQrw j34Zww aqbYPg _3FvZZg"
          type="button"
        >
          <span
            class="khPe7Q"
          >
            📥 Export Design
          </span>
        </button>
        <button
          class="_5KtATA LQzFZw VgvqkQ _8ERLTg Z3nT2A LQzFZw VgvqkQ _4_iekA _3oHQrw j34Zww aqbYPg _3FvZZg"
          type="button"
        >
          <span
            class="khPe7Q"
          >
            Start New Session
          </span>
        </button>
        <button
          class="_5KtATA LQzFZw VgvqkQ _8ERLTg unS_Qw LQzFZw VgvqkQ _4_iekA _3oHQrw j34Zww aqbYPg _3FvZZg"
          type="button"
        >
          <span
            class="khPe7Q"
          >
            Back to Menu
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CompleteScreen Snapshots should match snapshot without session 1`] = `
<div>
  <div
    class="scrollContainer"
  >
    <div
      class="jv_R6g"
      style="--NZu1Zw: 24px;"
    >
      <div
        class="BMOCzQ EC2pjw LuBWVA"
        style="--KtVHvQ: 32px; --WtUbjw: 16px;"
      >
        <div
          class="jv_R6g"
          style="--NZu1Zw: 16px; --okeDpw: center;"
        >
          <div
            style="width: 80px; height: 80px; border-radius: 50%; background-color: rgb(0, 200, 83); display: flex; align-items: center; justify-content: center; margin: 0px auto;"
          >
            <span
              style="font-size: 40px; color: white;"
            >
              ✓
            </span>
          </div>
          <h2
            class="_8yjy_A aZskFA u16U_g"
          >
            Photo Booth Complete!
          </h2>
          <p
            class="aWBg0w B8t6MQ QxuLlQ"
          >
            Your photos have been placed on the current page successfully.
          </p>
        </div>
      </div>
      <div
        class="BMOCzQ jhljBg DL9KoQ EC2pjw LuBWVA"
        style="--gms-pw: 16px;"
      >
        <div
          class="jv_R6g"
          style="--NZu1Zw: 8px;"
        >
          <h5
            class="liTStw aZskFA u16U_g"
          >
            Session Summary
          </h5>
          <p
            class="JYIidw aZskFA u16U_g"
          >
            Photos captured: 0
          </p>
          <p
            class="JYIidw aZskFA u16U_g"
          >
            Photos placed on page: Yes
          </p>
          <p
            class="JYIidw aZskFA QxuLlQ"
          >
            Your captured photos have been placed at the frame positions on the current page.
          </p>
        </div>
      </div>
      <div
        class="BMOCzQ jhljBg DL9KoQ EC2pjw LuBWVA"
        style="--gms-pw: 16px;"
      >
        <div
          class="jv_R6g"
          style="--NZu1Zw: 8px;"
        >
          <h5
            class="liTStw aZskFA u16U_g"
          >
            💡 Next Steps
          </h5>
          <p
            class="JYIidw aZskFA u16U_g"
          >
            • Review and adjust photo positions if needed
          </p>
          <p
            class="JYIidw aZskFA u16U_g"
          >
            • Delete the placeholder images beneath the photos
          </p>
          <p
            class="JYIidw aZskFA u16U_g"
          >
            • Duplicate your template page again for more sessions
          </p>
        </div>
      </div>
      <div
        class="jv_R6g"
        style="--NZu1Zw: 16px;"
      >
        <button
          class="_5KtATA LQzFZw VgvqkQ _8ERLTg rV61VQ LQzFZw VgvqkQ _4_iekA _3oHQrw j34Zww aqbYPg _3FvZZg"
          type="button"
        >
          <span
            class="khPe7Q"
          >
            📥 Export Design
          </span>
        </button>
        <button
          class="_5KtATA LQzFZw VgvqkQ _8ERLTg Z3nT2A LQzFZw VgvqkQ _4_iekA _3oHQrw j34Zww aqbYPg _3FvZZg"
          type="button"
        >
          <span
            class="khPe7Q"
          >
            Start New Session
          </span>
        </button>
        <button
          class="_5KtATA LQzFZw VgvqkQ _8ERLTg unS_Qw LQzFZw VgvqkQ _4_iekA _3oHQrw j34Zww aqbYPg _3FvZZg"
          type="button"
        >
          <span
            class="khPe7Q"
          >
            Back to Menu
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
